--- a/blank.html
+++ b/blank.html
@@ -29,10 +29,10 @@
            <h1 class="passport">Passport Number:  ..............</h1>
            <h1 class="Phone">Phone:  .............</h1>
            <h1 class="link">Get your Documents:</h1>
-            <a class="button" href="link" >Application</a>
+  <!--          <a class="button" href="link" >Application</a>
             <a class="button" href="link" >Job Letter</a>
             <a class="button" href="link" >Confirmation</a> <br>
-            <a class="button" href="link" >LMIA</a> <br> 
+            <a class="button" href="link" >LMIA</a> <br>  -->
         </div>
         <div class="photo">
             <img src="img/blank-profile.webp" alt="notshow">
