--- a/samim.html
+++ b/samim.html
@@ -34,7 +34,7 @@
             <a class="button" href="link" >LMIA</a> <br>  -->
         </div>
         <div class="photo">
-            <img src="img/blank-profile.webp" alt="notshow">
+            <img src="img/samim.jpg" alt="notshow">
         </div>
         </div>
        </div>
