--- a/samim.html
+++ b/samim.html
@@ -28,9 +28,9 @@
            <h1 class="age">Date of birth:  01 APR 1969</h1>
            <h1 class="passport">Passport Number: A11754006</h1>
            <h1 class="link">Get your Documents:</h1>
-           <a class="button" href="#" >Application</a>
-       <!--      <a class="button" href="link" >Job Letter</a>
-            <a class="button" href="link" >Confirmation</a> <br>
+           <a class="button" href="https://drive.google.com/file/d/10EBCWhsv_0lSRs9vHXnTSJWM6aiIPC24/view?usp=sharing" >Application</a>
+            <a class="button" href="https://drive.google.com/file/d/1O80EjZh2pF9f5Z3idxbC0JEwiRSwNVgz/view?usp=sharing" >Job Letter</a>
+          <!--   <a class="button" href="link" >Confirmation</a> <br>
             <a class="button" href="link" >LMIA</a> <br>  -->
         </div>
         <div class="photo">
