--- a/samim.html
+++ b/samim.html
@@ -24,7 +24,7 @@
             <div class="data">
            <h1 class="name">Name:  SAMIM</h1>
            <h1 class="fatherName">Father Name:  SAMSUL HAQUE</h1>
-           <h1 class="motherName">Mother Name:  ASMATERA NESA</h1>
+           <h1 class="motherName">Mother Name:  ASMATER NESA</h1>
            <h1 class="age">Date of birth:  01 APR 1969</h1>
            <h1 class="passport">Passport Number: A11754006</h1>
            <h1 class="link">Get your Documents:</h1>
