--- a/dulal.html
+++ b/dulal.html
@@ -24,7 +24,7 @@
             <div class="data">
            <h1 class="name">Name: DULAL MIAH</h1>
            <h1 class="fatherName">Father Name:  MOHAMMAD JALAL UDDIN</h1>
-           <h1 class="motherName">Mother Name: ISS FIROJA KATUN</h1>
+           <h1 class="motherName">Mother Name: MISS FIROJA KATUN</h1>
            <h1 class="age">Date of birth:  02 MAR 1983</h1>
            <h1 class="passport">Passport Number:  EJ0392953</h1>
            <h1 class="Phone">Phone:  +966 57 6932916 </h1>
